feat(profile): update edit avatar page style

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -904,7 +904,7 @@
     "submit": "Submit",
     "clearAvatarTip": "Submit an empty url to remove the avatar",
     "avatarUpdated": "Avatar updated",
-    "viewSharedAvatars": "View shared avatars"
+    "viewSharedAvatars": "Want beautiful avatars? Check shared avatars here"
   },
   "updatePage": {
     "title": "Get updates",
