--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -904,7 +904,7 @@
     "submit": "提交",
     "clearAvatarTip": "提交一个空链接可以清除当前使用的头像",
     "avatarUpdated": "头像已更新",
-    "viewSharedAvatars": "查看公共头像"
+    "viewSharedAvatars": "在找好看头像？点我看公共头像"
   },
   "updatePage": {
     "title": "获取更新",
