--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -904,7 +904,7 @@
     "submit": "提交",
     "clearAvatarTip": "提交一個空連結可以清除目前使用的頭像",
     "avatarUpdated": "頭像已更新",
-    "viewSharedAvatars": "查看公共頭像"
+    "viewSharedAvatars": "在找好看頭像？點我看公共頭像"
   },
   "updatePage": {
     "title": "取得更新",
