feat(card): allow copy text content

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -718,7 +718,8 @@
       }
     },
     "share": "Copy share link",
-    "openInBrowser": "Open in browser"
+    "openInBrowser": "Open in browser",
+    "copyText": "Copy Text"
   },
   "packetCard": {
     "title": "Packet",
