--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -665,7 +665,8 @@
         "title": "自定义",
         "colorValue": "颜色",
         "invalidColor": "无效的颜色",
-        "formatTip": "输入颜色的名字（例如darkorange、DarkOrange）或者hex形式的颜色数值（例如f0c、ff00cc、14d084）"
+        "formatTip": "输入颜色的名字（例如darkorange、DarkOrange）或者hex形式的颜色数值（例如f0c、ff00cc、14d084）",
+        "recentColor": "最近使用"
       }
     }
   },
