--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -742,6 +742,11 @@
     "experimentalInfo": "實驗性bbcode編輯器",
     "experimentalInfoTitle": "實驗性bbcode編輯器",
     "experimentalInfoDetail": "此bbcode編輯器支援所見即所得，可以方便地添加文字樣式和其他bbcode元件。\n但處於實驗階段：已經經過測試，但可能有bug。",
+    "expandToolbar": "展開工具列",
+    "collapsedToolbar": "收起工具列",
+    "toolbar": "工具列",
+    "additionalOptions": "附加選項",
+    "readPerm": "讀取權限",
     "emoji": {
       "title": "表情",
       "downloading": "正在下載表情（大約10MB內容），這可能需要一些時間。。",
