feat: support use detected proxy settings when app startup
More closer to proxy free state, now we can use the proxy detected when
app startup.

Note that the proxy fetching process may cost more than we think, so it
only runs when app startup. In future version we can do it elsewhere.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -184,6 +184,10 @@
           "testing": "Testing...",
           "connected": "Proxy is running",
           "disconnected": "Proxy may not running"
+        },
+        "useDetectProxy": {
+          "title": "Auto detect proxy",
+          "detail":"Use the detected proxy settings when app startup"
         }
       },
       "exportData": "Export data",
