feat: fast rate templates
This commit added templates for fast rating. Each template holds
user defined attribute values.

* To use templates, enter the action buttons in rate page.
* To add or edit templates, entry both in settings page and rate page.

Note that two upstream issues occurred when adding this feature:

Rate reason and the optional 'notify user' option are not included in
template, not planned to do so, or more, not recommended to do so.

1. Slang generated incorrect code that can not compile, see 'editPage'
  items in i18n files for detail.
2. Drift not producing item changes in stream if value is changed by
  `insertOrUpdate`.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -491,7 +491,8 @@
     "unknownAllowedRange": "Unknown allowed range $range",
     "onlyAllowIntegers": "Only integers are allowed",
     "failedToRate": "Rate failed",
-    "scoreTodayRemaining": "Today Remaining $score"
+    "scoreTodayRemaining": "Today Remaining $score",
+    "fillWithTemplate": "Fill with template"
   },
   "pointsPage": {
     "title": "Points Statistics",
@@ -941,6 +942,33 @@
       "fh": "fh ${value: String}",
       "jl": "jl ${value: String}",
       "specialAttr": "special points ${value: String}"
+    }
+  },
+  "fastRateTemplate": {
+    "title": "Rate Templates",
+    "details": "Templates to fill values when rating",
+    "choose": "Choose one template to fill in the values",
+    "name": "Template name",
+    "ww": "Famous",
+    "tsb": "Coins",
+    "xc": "Publicity",
+    "jl": "Spirit",
+    "tr": "Natural",
+    "fh": "Scheming",
+    "special": "Special",
+    "new": "New",
+    "showAllUsers": "Show all users",
+    "delete": "Delete rate template",
+    "edit": "Edit template",
+    "pick": "Pick template",
+    "deleteConfirm": "Are you sure to delete the rate template? This can not be undone",
+    "editPageTitle": "New rate template",
+    "editPageAlreadyExists": "Same name template already exists",
+    "editPageOverride": "Override same name template",
+    "editPageTemplateAdded": "Rate template added",
+    "editPage": {
+      "nameNotEmpty": "Name shall not be empty",
+      "invalidValue": "Invalid value"
     }
   }
 }
