feat(rate): show empty template hint

--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -957,7 +957,7 @@
     "fh": "腹黑",
     "special": "特殊积分",
     "new": "新模板",
-    "showAllUsers": "显示所有用户的",
+    "empty": "没有可用的评分模板",
     "delete": "删除模板",
     "edit": "编辑模板",
     "pick": "选择模板",
