--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -957,7 +957,7 @@
     "fh": "腹黑",
     "special": "特殊積分",
     "new": "新範本",
-    "showAllUsers": "顯示所有使用者的",
+    "empty": "沒有可用的評分範本",
     "delete": "刪除模板",
     "edit": "編輯範本",
     "pick": "選擇模板",
