--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -957,7 +957,7 @@
     "fh": "Scheming",
     "special": "Special",
     "new": "New",
-    "showAllUsers": "Show all users",
+    "empty": "No rate templates available",
     "delete": "Delete rate template",
     "edit": "Edit template",
     "pick": "Pick template",
