feat: support open settings in list app bar
Allow do it in thread page or forum page.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -22,7 +22,8 @@
     "minutes": "${value: int} minutes",
     "hours": "${value: int} hours",
     "days": "${value: int} days",
-    "now": "Now"
+    "now": "Now",
+    "openSettings": "Open settings"
   },
   "navigation": {
     "homepage": "Home",
