--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -404,7 +404,16 @@
       "title": "操作記錄"
     },
     "softCloseHint": "帖子已关闭，回复前请注意",
-    "statistics": "${view: int} 查看 ${reply: int} 回覆"
+    "statistics": "${view: int} 查看 ${reply: int} 回覆",
+    "threadInfo": {
+      "title": "貼文訊息",
+      "threadTitle": "標題",
+      "threadID": "ID",
+      "threadUrl": "連結",
+      "threadUrlWithDomain": "連結（有網域）",
+      "threadUrlBBCode": "連結BBCode",
+      "threadUrlBBCodeWithDomain": "連結BBCode（有網域）"
+    }
   },
   "noticePage": {
     "title": "通知",
@@ -585,11 +594,12 @@
     "statistics": "詳細資料",
     "failedToLoadWithReason": "無法載入圖片: ${reason: String}",
     "failedToLoad": "無法載入圖片",
-    "url": "Url：${url: String}",
-    "size": "圖片大小：${width: int} x ${height: int}",
-    "cacheName": "快取名稱：${name: String}",
-    "cacheSize": "快取大小：${size: String}",
-    "usage": "用途: ${usage: String}"
+    "url": "Url",
+    "sizeTitle": "圖片大小",
+    "sizeValue": "${width: int} x ${height: int}",
+    "cacheName": "快取名稱",
+    "cacheSize": "快取大小",
+    "usage": "用途"
   },
   "forumCard": {
     "links": "連結",
@@ -1004,5 +1014,16 @@
     "editPageTemplateAdded": "回覆範本已儲存",
     "editPageNameNotEmpty": "名稱不能為空白",
     "editPageSaveTemplate": "儲存範本"
+  },
+  "copyDialog": {
+    "copyTitle": "複製內容",
+    "copySelectTitle": "選擇與複製",
+    "copyAll": "複製全部",
+    "share": "分享",
+    "close": "关闭"
+  },
+  "copyButton": {
+    "copyTip": "複製",
+    "copied": "已複製"
   }
 }
