feat: stablize the BBCode parser
The BBCode parser reaches stable stage with 100% coverage and most
commonly used tags are supported.

From now on, enabling and disabling BBCode parser is app wide.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -146,8 +146,11 @@
         "detail": "Duration of auto sync notice from server"
       },
       "editorBBCodeParser": {
-        "title": "Enable bbcode parser (experimental)",
-        "detail": "Achieve WYSIWYG when editing thread content"
+        "title": "Enable bbcode parser",
+        "tip": {
+          "title": "When to use BBCode parser",
+          "detail": "1. Editing published thread\n2. Editing reply templates\n3. Insert reply templates\n4. Expand bottom editor in thread and chat page"
+        }
       }
     },
     "checkinSection": {
