feat(rate): pass total info into rate log page

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -1035,6 +1035,7 @@
     "tabs" : {
       "accumulated": "Accumulated",
       "original": "Original"
-    }
+    },
+    "total": "Total rates"
   }
 }
