feat: part of native http implementation
This commit introduced native_dio_adapter which uses native http client
implementation on Android, iOS and macOS.

Note that we are using the embeded cronet http library, get rid of gms
service but the library is not 16KB page sized.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -207,7 +207,8 @@
         "useDetectProxy": {
           "title": "Auto detect proxy",
           "detail":"Use the detected proxy settings when app startup"
-        }
+        },
+        "automatedOnPlatform": "Proxy settings are automatically configured on this platform"
       },
       "exportData": "Export data",
       "importData": {
