--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -207,7 +207,8 @@
         "useDetectProxy": {
           "title": "自动检测代理",
           "detail": "使用在应用启动时检测到的代理设置"
-        }
+        },
+        "automatedOnPlatform": "在本平台上代理设置会自动配置"
       },
       "exportData": "导出数据",
       "importData": {
