--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -23,7 +23,9 @@
     "hours": "${value: int} 小时",
     "days": "${value: int} 天",
     "now": "刚刚",
-    "openSettings": "打开设置"
+    "openSettings": "打开设置",
+    "openInBrowser": "在浏览器中打开",
+    "close": "关闭"
   },
   "navigation": {
     "homepage": "主页",
@@ -43,7 +45,8 @@
       "checkin": "签到",
       "myThread": "我的帖子",
       "latestThread": "最新帖子"
-    }
+    },
+    "showMoreUserOperationsTip": "显示更多用户操作"
   },
   "topicPage": {
     "title": "分区",
@@ -296,7 +299,8 @@
     "version": "软件版本",
     "flutterVersion": "Flutter版本",
     "dartVersion": "Dart版本",
-    "license": "版权"
+    "license": "版权",
+    "copyEnvironmentInfo": "复制环境信息"
   },
   "loginPage": {
     "title": "登录天使动漫",
@@ -579,7 +583,9 @@
       "changeType": "收支",
       "operationType": "操作类型",
       "dateRange": "日期范围",
-      "query": "查询"
+      "query": "查询",
+      "showFilterTip": "显示筛选条件",
+      "hideFilterTip": "隐藏筛选条件"
     }
   },
   "postEditPage": {
@@ -635,7 +641,9 @@
     "success": "发送成功",
     "failed": "发送失败：$message",
     "online": "[在线]",
-    "offline": "[离线]"
+    "offline": "[离线]",
+    "viewUserSpaceTip": "查看用户资料",
+    "viewChatHistoryTip": "查看历史聊天"
   },
   "imageDetailPage": {
     "title": "图片详情",
@@ -816,7 +824,8 @@
     "detail": "你找到了一个红包！",
     "open": "打开",
     "failedToOpen": "打开失败",
-    "allTakenAway": "红包都领完了"
+    "allTakenAway": "红包都领完了",
+    "viewReceiveHistory": "查看领取记录"
   },
   "bountyCard": {
     "title": "悬赏",
@@ -847,7 +856,8 @@
       "link": "链接",
       "errorEmpty": "不能为空",
       "autoPaste": {
-        "tip": "粘贴b站分享链接",
+        "action": "粘贴b站分享链接",
+        "tip": "查看自动粘贴功能的提示",
         "detail": "从剪切板粘贴b站分享链接。\n格式为【视频名】 https://www.bilibili.com/BV号或AV号"
       }
     },
@@ -877,7 +887,9 @@
       "visitUserSpace": "访问TA的主页",
       "search": "搜索",
       "searchResult": "结果",
-      "randomFriend": "随机好友"
+      "randomFriend": "随机好友",
+      "viewUserSpaceTip": "查看用户资料",
+      "refreshRecommendTip": "刷新推荐好友"
     }
   },
   "imageBottomSheet": {
@@ -951,7 +963,12 @@
   },
   "packetDetailPage": {
     "title": "红包详情",
-    "statistics": "在 ${time: String} 中有 ${users: int} 名用户获得共 ${coins: int} 个天使币"
+    "statistics": "在 ${time: String} 中有 ${users: int} 名用户获得共 ${coins: int} 个天使币",
+    "sort": {
+      "sortByMostCoins": "按tsb由多到少排序",
+      "sortByLeastCoins": "按tsb由少到多排序",
+      "sortByTime": "按时间排序"
+    }
   },
   "pollCard": {
     "title": "投票",
@@ -1090,6 +1107,12 @@
       "accumulated": "累加后",
       "original": "原数据"
     },
-    "total": "总评分"
+    "total": "总评分",
+    "showTotalRatePointsTip": "显示总评分"
+  },
+  "replyBar": {
+    "notReplyToFloorTip": "不回复该楼层（改为回复楼主）",
+    "expandToolbarTip": "展开工具栏",
+    "collapseToolbarTip": "收起工具栏"
   }
 }
